VDR Plugin 'epgsearch' Revision History
---------------------------------------
2025-12-15
- set version to 2.4.5
- set version of quickepgsearch epgsearchonly conflictcheckonly to 2.4.5
- new Variable "Aux" allows access to auxiliary field of EPG
- removed deprecated call to MainThreadHook(void)
- add column with "time of last recording" to search timer results
- Search for repeats in EPG menu will ignore (episodes) in title
- Add general searchtimer config to limit days of timer creation
- Add current searchtimer id to some log messages

2025-12-04
- removed 'HISTORY.DE', as no more changes have been recorded since years
- revised German translation w.r.t. typos, readability, and style
- changed menus to use 'tr()' string constants, where possible
- fixed typos in 'tr()' strings (and other code locations accidentally found)
- fixed wrong pairs of 'new' operator and 'free()' (instead of 'delete' operator)
- fixed some memory leaks, like multiple 'strdup()' assignments with just one 'free()'
- fixed some buffer operations without (correct) capacity checks
- simplified 'free()' and 'delete' by skipping unnecessary null-pointer test
- consolidated encoding and decoding of special characters ':' and '|'
- removed further 'using std' directives missed last time
- removed orphan 'options' in searches and blacklists (see Version 0.9.15)
- aligned capabilities (parameter sets) of searches, templates, and blacklists
- sorted class attributes to have related variables close to each other
- revised constructors and copy methods to use the same sequence of member access
- fixed some issues encountered during rework, like template fields not copied
- supplied some missing parameter ranges in menus, where reasonable
- rejected duplicate channel-groups names (menu: rename; SVDRP: NEWC, RENC)
- added parental rating as new search parameter
- added flexible matching criteria for content descriptors
- refactored missing EPG categories into category matching mode